fixed homepage white space at the bottom by removing margin top from main

--- a/style.css
+++ b/style.css
@@ -2,10 +2,21 @@
   margin: 0;
   padding: 0;
 }
+html{
+  height: 100%;
+}
 
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  min-height: 100%;
+}
+footer {
+  width: 100%;
+  height: 30px;
+  background-color:red;
+  color:black;
+  overflow: hidden;
 }
 /*
   * website animated background section
@@ -109,7 +120,6 @@ main {
   display: flex;
   width: auto;
   height: 600px;
-  margin-top: 100px;
   margin-bottom: auto;
 }
 .box1 {
@@ -175,7 +185,7 @@ img {
   width: 350px;
   height: 300px;
 }
-footer {
+/*footer {
   text-align: center;
   width: auto;
   height: 60px;
